IllinoisGRMHD -- Conservative-to-primitive drivers and dependencies: updated the files to be compatible with the recently added standalone routine for the conservative-to-primitive algorithm

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_u2p_util.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_u2p_util.ipynb
@@ -122,7 +122,8 @@
    ],
    "source": [
     "%%writefile $outfile_path__harm_u2p_util__c\n",
-    "\n",
+    "#ifndef __HARM_U2P_UTIL__C__\n",
+    "#define __HARM_U2P_UTIL__C__\n",
     "/*\n",
     "  -------------------------------------------------------------------------------\n",
     "  Copyright 2005 Scott C. Noble, Charles F. Gammie, \n",
@@ -418,7 +419,9 @@
     "{\n",
     "    \n",
     "  // Set up Gamma_th:\n",
+    "#ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
+    "#endif\n",
     "\n",
     "  // Compute P_cold, eps_cold\n",
     "  CCTK_REAL P_cold, eps_cold;\n",
@@ -520,7 +523,9 @@
     "{\n",
     "    \n",
     "  // Set up Gamma_th:\n",
+    "#ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
+    "#endif\n",
     "    \n",
     "  // Compute P_cold, eps_cold\n",
     "  CCTK_REAL P_cold, eps_cold;\n",
@@ -533,7 +538,8 @@
     "   *  ----------------------------------------------------------------------------\n",
     "   */\n",
     "  return( (P_cold + (Gamma_th-1.0)*( w - rho0*(1.0+eps_cold) ) )/Gamma_th );\n",
-    "}"
+    "}\n",
+    "#endif"
    ]
   },
   {
@@ -559,7 +565,12 @@
      "text": [
       "Validation test for harm_u2p_util.c: FAILED!\n",
       "Diff:\n",
-      "28,36c28,32\n",
+      "1c1,2\n",
+      "< \n",
+      "---\n",
+      "> #ifndef __HARM_U2P_UTIL__C__\n",
+      "> #define __HARM_U2P_UTIL__C__\n",
+      "28,77c29,33\n",
       "< void primtoU_g( CCTK_REAL prim[], CCTK_REAL gcov[][NDIM], CCTK_REAL gcon[][NDIM], CCTK_REAL gdet,  CCTK_REAL U[] );\n",
       "< static void ucon_calc_g(CCTK_REAL prim[],CCTK_REAL gcov[][NDIM],CCTK_REAL gcon[][NDIM],CCTK_REAL ucon[]);\n",
       "< static void raise_g(CCTK_REAL vcov[], CCTK_REAL gcon[][NDIM], CCTK_REAL vcon[]);\n",
@@ -569,13 +580,7 @@
       "< static CCTK_REAL pressure_rho0_u(CCTK_REAL rho0, CCTK_REAL u);\n",
       "< static CCTK_REAL pressure_rho0_w(CCTK_REAL rho0, CCTK_REAL w);\n",
       "< int gamma_calc_g(CCTK_REAL *pr, CCTK_REAL gcov[NDIM][NDIM], CCTK_REAL *gamma);\n",
-      "---\n",
-      "> static void raise_g(CCTK_REAL vcov[NDIM], CCTK_REAL gcon[NDIM][NDIM], CCTK_REAL vcon[NDIM]);\n",
-      "> static void lower_g(CCTK_REAL vcon[NDIM], CCTK_REAL gcov[NDIM][NDIM], CCTK_REAL vcov[NDIM]);\n",
-      "> static void ncov_calc(CCTK_REAL gcon[NDIM][NDIM],CCTK_REAL ncov[NDIM]);\n",
-      "> static CCTK_REAL pressure_rho0_u(eos_struct eos, CCTK_REAL rho0, CCTK_REAL u);\n",
-      "> static CCTK_REAL pressure_rho0_w(eos_struct eos, CCTK_REAL rho0, CCTK_REAL w);\n",
-      "38,159c34,35\n",
+      "< \n",
       "< /********************************************************************** \n",
       "<    primtoU_g(): \n",
       "< \n",
@@ -616,7 +621,13 @@
       "<   ncov_calc(gcon,ncov) ;\n",
       "< \n",
       "<   gamma = -ncov[0]*ucon[0] ;\n",
-      "< \n",
+      "---\n",
+      "> static void raise_g(CCTK_REAL vcov[NDIM], CCTK_REAL gcon[NDIM][NDIM], CCTK_REAL vcon[NDIM]);\n",
+      "> static void lower_g(CCTK_REAL vcon[NDIM], CCTK_REAL gcov[NDIM][NDIM], CCTK_REAL vcov[NDIM]);\n",
+      "> static void ncov_calc(CCTK_REAL gcon[NDIM][NDIM],CCTK_REAL ncov[NDIM]);\n",
+      "> static CCTK_REAL pressure_rho0_u(eos_struct eos, CCTK_REAL rho0, CCTK_REAL u);\n",
+      "> static CCTK_REAL pressure_rho0_w(eos_struct eos, CCTK_REAL rho0, CCTK_REAL w);\n",
+      "79,159c35,36\n",
       "<   bcon_calc_g(prim,ucon,ucov,ncov,bcon) ;\n",
       "<   lower_g(bcon,gcov,bcov) ;\n",
       "< \n",
@@ -701,19 +712,19 @@
       "---\n",
       "> // Inlined function used by this file\n",
       "> static inline void compute_P_cold__eps_cold(eos_struct eos,CCTK_REAL rho_in, CCTK_REAL &P_cold,CCTK_REAL &eps_cold);\n",
-      "166c42\n",
+      "166c43\n",
       "< ******************************************************************/\n",
       "---\n",
       "> ***********************************************************************/\n",
-      "185c61\n",
+      "185c62\n",
       "< ******************************************************************/\n",
       "---\n",
       "> ***********************************************************************/\n",
-      "206c82\n",
+      "206c83\n",
       "< ******************************************************************/\n",
       "---\n",
       "> ***********************************************************************/\n",
-      "221,292d96\n",
+      "221,292d97\n",
       "< \n",
       "< /********************************************************************** \n",
       "<     bcon_calc_g(): \n",
@@ -786,23 +797,26 @@
       "< }\n",
       "< \n",
       "< \n",
-      "298,299c102,103\n",
+      "298,299c103,104\n",
       "<    pressure as a function of rho0 and u \n",
       "<    this is used by primtoU and Utoprim_?D\n",
       "---\n",
       "> pressure as a function of rho0 and u \n",
       "> this is used by primtoU and Utoprim_?D\n",
-      "301c105\n",
+      "301c106\n",
       "< static CCTK_REAL pressure_rho0_u(CCTK_REAL rho0, CCTK_REAL u)\n",
       "---\n",
       "> static CCTK_REAL pressure_rho0_u(eos_struct eos, CCTK_REAL rho0, CCTK_REAL u)\n",
-      "302a107,108\n",
+      "302a108,110\n",
       ">     \n",
       ">   // Set up Gamma_th:\n",
-      "304,305d109\n",
+      "> #ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
+      "304,305c112\n",
       "<   return((gamma_th /* <- Should be local polytropic Gamma factor */  - 1.)*u) ;\n",
       "< }\n",
-      "306a111,123\n",
+      "---\n",
+      "> #endif\n",
+      "306a114,126\n",
       ">   // Compute P_cold, eps_cold\n",
       ">   CCTK_REAL P_cold, eps_cold;\n",
       ">   compute_P_cold__eps_cold(eos,rho0, P_cold,eps_cold);\n",
@@ -816,21 +830,20 @@
       ">   return( P_cold + (Gamma_th - 1.0)*(u - rho0*eps_cold) );\n",
       "> \n",
       "> }\n",
-      "308d124\n",
+      "308d127\n",
       "<   \n",
-      "313c129\n",
+      "313c132\n",
       "< static CCTK_REAL pressure_rho0_w(CCTK_REAL rho0, CCTK_REAL w)\n",
       "---\n",
       "> static CCTK_REAL pressure_rho0_w(eos_struct eos, CCTK_REAL rho0, CCTK_REAL w)\n",
-      "314a131,132\n",
+      "314a134,136\n",
       ">     \n",
       ">   // Set up Gamma_th:\n",
-      "316,319c134,146\n",
+      "> #ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
+      "316c138,150\n",
       "<   return((gamma_th /* <- Should be local polytropic Gamma factor */ -1.)*(w - rho0)/gamma_th /* <- Should be local polytropic Gamma factor */ ) ;\n",
-      "< }\n",
-      "< \n",
-      "< \n",
       "---\n",
+      "> #endif\n",
       ">     \n",
       ">   // Compute P_cold, eps_cold\n",
       ">   CCTK_REAL P_cold, eps_cold;\n",
@@ -843,7 +856,11 @@
       ">    *  ----------------------------------------------------------------------------\n",
       ">    */\n",
       ">   return( (P_cold + (Gamma_th-1.0)*( w - rho0*(1.0+eps_cold) ) )/Gamma_th );\n",
-      "> }\n",
+      "318,319c152\n",
+      "< \n",
+      "< \n",
+      "---\n",
+      "> #endif\n",
       "\\ No newline at end of file\n"
      ]
     }
