--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_utoprim_2d.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_utoprim_2d.ipynb
@@ -143,6 +143,8 @@
    ],
    "source": [
     "%%writefile $outfile_path__harm_utoprim_2d__c\n",
+    "#ifndef __HARM_UTOPRIM_2D__C__\n",
+    "#define __HARM_UTOPRIM_2D__C__\n",
     "/***********************************************************************************\n",
     "    Copyright 2006 Charles F. Gammie, Jonathan C. McKinney, Scott C. Noble, \n",
     "                   Gabor Toth, and Luca Del Zanna\n",
@@ -1535,7 +1537,9 @@
     "static CCTK_REAL pressure_W_vsq(eos_struct eos, CCTK_REAL W, CCTK_REAL vsq, CCTK_REAL &D) \n",
     "{\n",
     "\n",
+    "#ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
+    "#endif\n",
     "\n",
     "  // Compute gamma^{-2} = 1 - v^{2} and gamma^{-1}\n",
     "  CCTK_REAL inv_gammasq = 1.0 - vsq;\n",
@@ -1632,7 +1636,10 @@
     "static CCTK_REAL dpdW_calc_vsq(CCTK_REAL W, CCTK_REAL vsq)\n",
     "{\n",
     "\n",
+    "#ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
+    "#endif\n",
+    "\n",
     "  return( (Gamma_th - 1.0) * (1.0 - vsq) /  Gamma_th  ) ;\n",
     "\n",
     "}"
@@ -1715,7 +1722,10 @@
     "{\n",
     "\n",
     "  // This sets Gamma_th\n",
+    "#ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
+    "#endif\n",
+    "\n",
     "\n",
     "  // Set gamma and rho\n",
     "  CCTK_REAL gamma = 1.0/sqrt(1.0 - vsq);\n",
@@ -1909,7 +1919,7 @@
     "/****************************************************************************** \n",
     "             END   OF   UTOPRIM_2D.C\n",
     "******************************************************************************/\n",
-    "\n",
+    "#endif\n",
     "\n",
     "\n",
     "\n"
@@ -1938,7 +1948,10 @@
      "text": [
       "Validation test for harm_utoprim_2d.c: FAILED!\n",
       "Diff:\n",
-      "70,72c70,72\n",
+      "0a1,2\n",
+      "> #ifndef __HARM_UTOPRIM_2D__C__\n",
+      "> #define __HARM_UTOPRIM_2D__C__\n",
+      "70,72c72,74\n",
       "< static int Utoprim_new_body(CCTK_REAL U[], CCTK_REAL gcov[NDIM][NDIM], CCTK_REAL gcon[NDIM][NDIM], CCTK_REAL gdet,  CCTK_REAL prim[],long &n_iter);\n",
       "< static int general_newton_raphson( CCTK_REAL x[], int n, long &n_iter, void (*funcd) (CCTK_REAL [], CCTK_REAL [], CCTK_REAL [], CCTK_REAL [][NEWT_DIM], CCTK_REAL *, CCTK_REAL *, int,CCTK_REAL &,CCTK_REAL &,CCTK_REAL &,CCTK_REAL &,CCTK_REAL &),CCTK_REAL &Bsq,CCTK_REAL &QdotBsq,CCTK_REAL &Qtsq,CCTK_REAL &Qdotn,CCTK_REAL &D);\n",
       "< static void func_vsq( CCTK_REAL [], CCTK_REAL [], CCTK_REAL [], CCTK_REAL [][NEWT_DIM], CCTK_REAL *f, CCTK_REAL *df, int n,CCTK_REAL &Bsq,CCTK_REAL &QdotBsq,CCTK_REAL &Qtsq,CCTK_REAL &Qdotn,CCTK_REAL &D);\n",
@@ -1946,15 +1959,15 @@
       "> static int Utoprim_new_body(eos_struct eos, CCTK_REAL U[], CCTK_REAL gcov[NDIM][NDIM], CCTK_REAL gcon[NDIM][NDIM], CCTK_REAL gdet,  CCTK_REAL prim[],long &n_iter);\n",
       "> static int general_newton_raphson( eos_struct eos, CCTK_REAL x[], int n, long &n_iter, void (*funcd) (eos_struct, CCTK_REAL [], CCTK_REAL [], CCTK_REAL [], CCTK_REAL [][NEWT_DIM], CCTK_REAL *, CCTK_REAL *, int,CCTK_REAL &,CCTK_REAL &,CCTK_REAL &,CCTK_REAL &,CCTK_REAL &),CCTK_REAL &Bsq,CCTK_REAL &QdotBsq,CCTK_REAL &Qtsq,CCTK_REAL &Qdotn,CCTK_REAL &D);\n",
       "> static void func_vsq( eos_struct eos, CCTK_REAL [], CCTK_REAL [], CCTK_REAL [], CCTK_REAL [][NEWT_DIM], CCTK_REAL *f, CCTK_REAL *df, int n,CCTK_REAL &Bsq,CCTK_REAL &QdotBsq,CCTK_REAL &Qtsq,CCTK_REAL &Qdotn,CCTK_REAL &D);\n",
-      "74c74\n",
+      "74c76\n",
       "< static CCTK_REAL pressure_W_vsq(CCTK_REAL W, CCTK_REAL vsq, CCTK_REAL &D) ;\n",
       "---\n",
       "> static CCTK_REAL pressure_W_vsq(eos_struct eos, CCTK_REAL W, CCTK_REAL vsq, CCTK_REAL &D) ;\n",
-      "76c76\n",
+      "76c78\n",
       "< static CCTK_REAL dpdvsq_calc(CCTK_REAL W, CCTK_REAL vsq, CCTK_REAL &D);\n",
       "---\n",
       "> static CCTK_REAL dpdvsq_calc(eos_struct eos, CCTK_REAL W, CCTK_REAL vsq, CCTK_REAL &D);\n",
-      "89,97c89,97\n",
+      "89,97c91,99\n",
       "<               /  rho u^t            \\\n",
       "<          U =  |  T^t_t + rho u^t    |  sqrt(-det(g_{\\mu\\nu}))\n",
       "<               |  T^t_i              |\n",
@@ -1974,25 +1987,25 @@
       ">          P = |     uu      |\n",
       ">              | \\tilde{u}^i |\n",
       ">              \\     B^i     /\n",
-      "101c101\n",
+      "101c103\n",
       "<        U[NPR]    = conserved variables (current values on input/output);\n",
       "---\n",
       ">        U[NPR]           = conserved variables (current values on input/output);\n",
-      "105,106c105,106\n",
+      "105,106c107,108\n",
       "<        prim[NPR] = primitive variables (guess on input, calculated values on \n",
       "<                                         output if there are no problems);\n",
       "---\n",
       ">        prim[NPR]        = primitive variables (guess on input, calculated values on\n",
       ">                                                 output if there are no problems);\n",
-      "114c114\n",
+      "114c116\n",
       "< int Utoprim_2d(CCTK_REAL U[NPR], CCTK_REAL gcov[NDIM][NDIM], CCTK_REAL gcon[NDIM][NDIM], \n",
       "---\n",
       "> int Utoprim_2d(eos_struct eos, CCTK_REAL U[NPR], CCTK_REAL gcov[NDIM][NDIM], CCTK_REAL gcon[NDIM][NDIM], \n",
-      "150c150\n",
+      "150c152\n",
       "<   ret = Utoprim_new_body(U_tmp, gcov, gcon, gdet, prim_tmp,n_iter);\n",
       "---\n",
       ">   ret = Utoprim_new_body(eos, U_tmp, gcov, gcon, gdet, prim_tmp,n_iter);\n",
-      "175,177c175,177\n",
+      "175,177c177,179\n",
       "<              /  rho gamma        \\\n",
       "<          U = |  alpha T^t_\\mu  |\n",
       "<              \\  alpha B^i        /\n",
@@ -2000,7 +2013,7 @@
       ">              /   rho gamma   \\\n",
       ">          U = | alpha T^t_\\mu |\n",
       ">              \\   alpha B^i   /\n",
-      "181,184c181,184\n",
+      "181,184c183,186\n",
       "<                /    rho        \\\n",
       "<     prim = |    uu         |\n",
       "<                | \\tilde{u}^i   |\n",
@@ -2010,74 +2023,77 @@
       ">       prim = |     uu      |\n",
       ">              | \\tilde{u}^i |\n",
       ">              \\  alpha B^i  /\n",
-      "198c198\n",
+      "198c200\n",
       "<          3 -> failure: W<0 or W>W_TOO_BIG\n",
       "---\n",
       ">              3 -> failure: W<0 or W>W_TOO_BIG\n",
-      "204c204\n",
+      "204c206\n",
       "< static int Utoprim_new_body(CCTK_REAL U[NPR], CCTK_REAL gcov[NDIM][NDIM], \n",
       "---\n",
       "> static int Utoprim_new_body(eos_struct eos, CCTK_REAL U[NPR], CCTK_REAL gcov[NDIM][NDIM], \n",
-      "237a238,241\n",
+      "237a240,243\n",
       ">   // FIXME: The exact form of n^{\\mu} can be found\n",
       ">   //        in eq. (2.116) and implementing it\n",
       ">   //        directly is a lot more efficient than\n",
       ">   //        performing n^{\\mu} = g^{\\mu\\nu}n_{nu}\n",
-      "270c274\n",
+      "270c276\n",
       "<   p = pressure_rho0_u(rho0,u) ;\n",
       "---\n",
       ">   p = pressure_rho0_u(eos, rho0,u) ;\n",
-      "288c292\n",
+      "288c294\n",
       "<   retval = general_newton_raphson( x_2d, n, n_iter, func_vsq, Bsq,QdotBsq,Qtsq,Qdotn,D) ;  \n",
       "---\n",
       ">   retval = general_newton_raphson( eos, x_2d, n, n_iter, func_vsq, Bsq,QdotBsq,Qtsq,Qdotn,D) ;  \n",
-      "318c322\n",
+      "318c324\n",
       "<   p = pressure_rho0_w(rho0,w) ;\n",
       "---\n",
       ">   p = pressure_rho0_w(eos, rho0,w) ;\n",
-      "429,430c433,434\n",
+      "429,430c435,436\n",
       "< static int general_newton_raphson( CCTK_REAL x[], int n, long &n_iter,\n",
       "<                                    void (*funcd) (CCTK_REAL [], CCTK_REAL [], CCTK_REAL [], \n",
       "---\n",
       "> static int general_newton_raphson( eos_struct eos, CCTK_REAL x[], int n, long &n_iter,\n",
       ">                                    void (*funcd) (eos_struct, CCTK_REAL [], CCTK_REAL [], CCTK_REAL [], \n",
-      "454c458\n",
+      "454c460\n",
       "<     (*funcd) (x, dx, resid, jac, &f, &df, n, Bsq,QdotBsq,Qtsq,Qdotn,D);  /* returns with new dx, f, df */\n",
       "---\n",
       ">     (*funcd) (eos, x, dx, resid, jac, &f, &df, n, Bsq,QdotBsq,Qtsq,Qdotn,D);  /* returns with new dx, f, df */\n",
-      "540c544\n",
+      "540c546\n",
       "< static void func_vsq(CCTK_REAL x[], CCTK_REAL dx[], CCTK_REAL resid[], \n",
       "---\n",
       "> static void func_vsq(eos_struct eos, CCTK_REAL x[], CCTK_REAL dx[], CCTK_REAL resid[], \n",
-      "579c583\n",
+      "579c585\n",
       "<     p = pressure_rho0_w(rho0,w) ;\n",
       "---\n",
       ">     p = pressure_rho0_w(eos, rho0,w) ;\n",
-      "586c590\n",
+      "586c592\n",
       "<     p = pressure_rho0_w(rho0,w) ;\n",
       "---\n",
       ">     p = pressure_rho0_w(eos, rho0,w) ;\n",
-      "595c599\n",
+      "595c601\n",
       "<   p_tmp  = pressure_W_vsq( W, vsq , D);\n",
       "---\n",
       ">   p_tmp  = pressure_W_vsq( eos, W, vsq , D);\n",
-      "597c601\n",
+      "597c603\n",
       "<   dPdvsq = dpdvsq_calc( W, vsq, D );\n",
       "---\n",
       ">   dPdvsq = dpdvsq_calc( eos, W, vsq, D );\n",
-      "651,652c655,656\n",
+      "651,652c657,658\n",
       "<         -- Gamma-law equation of state;\n",
       "<         -- pressure as a function of W, vsq, and D:\n",
       "---\n",
       ">         -- Hybrid single and piecewise polytropic equation of state;\n",
       ">         -- pressure as a function of P_cold, eps_cold, W, vsq, and D:\n",
-      "654c658\n",
+      "654c660\n",
       "< static CCTK_REAL pressure_W_vsq(CCTK_REAL W, CCTK_REAL vsq, CCTK_REAL &D) \n",
       "---\n",
       "> static CCTK_REAL pressure_W_vsq(eos_struct eos, CCTK_REAL W, CCTK_REAL vsq, CCTK_REAL &D) \n",
-      "655a660\n",
+      "655a662,663\n",
       "> \n",
-      "658,661c663,675\n",
+      "> #ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
+      "656a665\n",
+      "> #endif\n",
+      "658,661c667,679\n",
       "<   CCTK_REAL gtmp;\n",
       "<   gtmp = 1. - vsq;\n",
       "<   \n",
@@ -2096,22 +2112,28 @@
       "> \n",
       ">   // Compute p = P_{cold} + P_{th}\n",
       ">   return( ( P_cold + (Gamma_th - 1.0)*( W*inv_gammasq - D*inv_gamma*( 1.0 + eps_cold ) ) )/Gamma_th );\n",
-      "673a688\n",
+      "673a692,693\n",
       "> \n",
-      "675c690\n",
+      "> #ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
+      "675c695,697\n",
       "<   return( (gamma_th /* <- Should be local polytropic Gamma factor */  - 1.) * (1. - vsq) /  gamma_th /* <- Should be local polytropic Gamma factor */  ) ;\n",
       "---\n",
+      "> #endif\n",
+      "> \n",
       ">   return( (Gamma_th - 1.0) * (1.0 - vsq) /  Gamma_th  ) ;\n",
-      "685c700\n",
+      "685c707\n",
       "< static CCTK_REAL dpdvsq_calc(CCTK_REAL W, CCTK_REAL vsq, CCTK_REAL &D)\n",
       "---\n",
       "> static CCTK_REAL dpdvsq_calc(eos_struct eos, CCTK_REAL W, CCTK_REAL vsq, CCTK_REAL &D)\n",
-      "686a702,703\n",
+      "686a709,711\n",
       "> \n",
       ">   // This sets Gamma_th\n",
-      "688c705,742\n",
+      "> #ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
+      "688c713,752\n",
       "<   return( (gamma_th /* <- Should be local polytropic Gamma factor */  - 1.) * ( 0.5 * D / sqrt(1.-vsq)  - W  ) / gamma_th /* <- Should be local polytropic Gamma factor */   ) ;\n",
       "---\n",
+      "> #endif\n",
+      "> \n",
       "> \n",
       ">   // Set gamma and rho\n",
       ">   CCTK_REAL gamma = 1.0/sqrt(1.0 - vsq);\n",
@@ -2149,7 +2171,11 @@
       ">    * |                                            - (D/gamma) * deps_cold/dvsq) )  |\n",
       ">    *  -----------------------------------------------------------------------------\n",
       ">    */\n",
-      ">   return( ( dPcold_dvsq + (Gamma_th-1.0)*( -W + D*gamma*(1+eps_cold)/2.0 - D*depscold_dvsq/gamma ) )/Gamma_th );\n"
+      ">   return( ( dPcold_dvsq + (Gamma_th-1.0)*( -W + D*gamma*(1+eps_cold)/2.0 - D*depscold_dvsq/gamma ) )/Gamma_th );\n",
+      "695c759\n",
+      "< \n",
+      "---\n",
+      "> #endif\n"
      ]
     }
    ],
