Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order: Add Weyl scalars & curvature invariants

--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -60,6 +60,7 @@
     "        1. [Step 2.a.iv](#nrpy4christoffels_cartesian):Compute all 40 4-Christoffels $\\Gamma^{\\mu}_{\\nu\\delta}$\n",
     "        1. [Step 2.a.v](#nrpy4christoffels_spherical):  Notes on computing all 40 4-Christoffels $\\Gamma^{\\mu}_{\\nu\\delta}$ in the Spherical basis\n",
     "        1. [Step 2.a.vi](#nrpybasisxform): Notes on basis transforming all Cartesian basis quantities to spherical\n",
+    "        1. [Step 2.a.vii](#psi4andfriends): Output Weyl scalars $\\psi_0$ through $\\psi_4$, as well as Weyl invariants $J$ and $I$, from the `WeylScal4` ETK thorn\n",
     "    1. [Step 2.b](#nrpy_c_calling_function): C code calling function for the NRPy+ C output\n",
     "    1. [Step 2.c](#nrpygetgfname): The `get_gf_name()` function\n",
     "    1. [Step 2.d](#nrpy_interp_counter): C Code for Initializing and incrementing `InterpCounter`\n",
@@ -1437,6 +1438,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    " <a id='psi4andfriends'></a>\n",
+    "\n",
+    "### Step 2.a.vii: ): Output Weyl scalars $\\psi_0$ through $\\psi_4$, as well as Weyl invariants $J$ and $I$, from the `WeylScal4` ETK thorn \\[Back to [top](#toc)\\]\n",
+    "$$\\label{psi4andfriends}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Weylgfs = [\"Psi0r\",\"Psi0i\",\"Psi1r\",\"Psi1i\",\"Psi2r\",\"Psi2i\",\"Psi3r\",\"Psi3i\",\"Psi4r\",\"Psi4i\",\n",
+    "                                    \"curvIr\",\"curvIi\",\"curvJr\",\"curvJi\"]\n",
+    "Psi0r,Psi0i,Psi1r,Psi1i,Psi2r,Psi2i,Psi3r,Psi3i,Psi4r,Psi4i,curvIr,curvIi,curvJr,curvJi = \\\n",
+    "    gri.register_gridfunctions(\"AUX\",Weylgfs);\n",
+    "count = 0\n",
+    "for gf in [Psi0r,Psi0i,Psi1r,Psi1i,Psi2r,Psi2i,Psi3r,Psi3i,Psi4r,Psi4i,curvIr,curvIi,curvJr,curvJi]:\n",
+    "    gf_interp_list.append(gf_interp(\"Weyl scalar or invariant \"+Weylgfs[count]))\n",
+    "    interp_expr = gf\n",
+    "    which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)\n",
+    "    count = count + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='nrpy_c_calling_function'></a>\n",
     "\n",
     "## Step 2.b: C code calling function for the NRPy+ C output \\[Back to [top](#toc)\\]\n",
@@ -1447,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1509,11 @@
     "                                     const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
     "                                     const CCTK_REAL *betaU0GF,const CCTK_REAL *betaU1GF,const CCTK_REAL *betaU2GF,\n",
     "                                     const CCTK_REAL *alphaGF,   CCTK_REAL *interped_gfGF,\n",
-    "                                     CCTK_REAL *Ax_unstaggeredGF,CCTK_REAL *Ay_unstaggeredGF,CCTK_REAL *Az_unstaggeredGF) {\n",
+    "                                     CCTK_REAL *Ax_unstaggeredGF,CCTK_REAL *Ay_unstaggeredGF,CCTK_REAL *Az_unstaggeredGF,\n",
+    "const CCTK_REAL *Psi0rGF,const CCTK_REAL *Psi0iGF,const CCTK_REAL *Psi1rGF,const CCTK_REAL *Psi1iGF,\n",
+    "const CCTK_REAL *Psi2rGF,const CCTK_REAL *Psi2iGF,const CCTK_REAL *Psi3rGF,const CCTK_REAL *Psi3iGF,\n",
+    "const CCTK_REAL *Psi4rGF,const CCTK_REAL *Psi4iGF,\n",
+    "const CCTK_REAL *curvIrGF,const CCTK_REAL *curvIiGF,const CCTK_REAL *curvJrGF,const CCTK_REAL *curvJiGF) {\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "#include \"list_of_functions_to_interpolate.h\"\n",
     "}\n",
@@ -1501,7 +1534,9 @@
     "                                   Bx,By,Bz,\n",
     "                                   gxx,gxy,gxz,gyy,gyz,gzz,\n",
     "                                   betax,betay,betaz,alp, interped_gf,\n",
-    "                                   Ax_unstaggered,Ay_unstaggered,Az_unstaggered);\n",
+    "                                   Ax_unstaggered,Ay_unstaggered,Az_unstaggered,\n",
+    "                                  Psi0r,Psi0i,Psi1r,Psi1i,Psi2r,Psi2i,Psi3r,Psi3i,Psi4r,Psi4i,\n",
+    "                                  curvIr,curvIi,curvJr,curvJi);\n",
     "// interped_gf will be interpolated across AMR boundaries, meaning that\n",
     "//    it must be prointated. Only gridfunctions with 3 timelevels stored\n",
     "//    may be prointated (provided time_interpolation_order is set to the\n",
@@ -1530,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1556,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1645,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1964,6 +1999,7 @@
     "#   will rely on variables/function that exist within those\n",
     "#   functions. \n",
     "inherits:   admbase IllinoisGRMHD Grid\n",
+    "inherits:   WeylScal4 # Needed for Weyl scalars psi4, psi3, psi..., and Weyl invariants I & J.\n",
     "# For FM ID comparisons:\n",
     "inherits:   FishboneMoncriefID\n",
     "\n",
@@ -2004,7 +2040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2105,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2342,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2350,7 +2386,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb to latex\n",
-      "[NbConvertApp] Writing 170980 bytes to Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex\n",
+      "[NbConvertApp] Writing 173299 bytes to Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
