--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -1456,7 +1456,7 @@
     "    gri.register_gridfunctions(\"AUX\",Weylgfs);\n",
     "count = 0\n",
     "for gf in [Psi0r,Psi0i,Psi1r,Psi1i,Psi2r,Psi2i,Psi3r,Psi3i,Psi4r,Psi4i,curvIr,curvIi,curvJr,curvJi]:\n",
-    "    gf_interp_list.append(gf_interp(\"Weyl scalar or invariant \"+Weylgfs[count]))\n",
+    "    gf_interp_list.append(gf_interp(\"4-Weyl scalar or invariant \"+Weylgfs[count]))\n",
     "    interp_expr = gf\n",
     "    which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)\n",
     "    count = count + 1"
@@ -2386,7 +2386,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb to latex\n",
-      "[NbConvertApp] Writing 173299 bytes to Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex\n",
+      "[NbConvertApp] Writing 176070 bytes to Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
