IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__ETKThorn__ID_converter_ILGRMHD: Replace error with warning message, with more details.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__ETKThorn__ID_converter_ILGRMHD.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__ETKThorn__ID_converter_ILGRMHD.ipynb
@@ -191,18 +191,22 @@
     "         * P = P_cold.\n",
     "         */\n",
     "        /* Compute P_cold */\n",
-    "        int polytropic_index = find_polytropic_K_and_Gamma_index(eos, rho_b[index]);\n",
-    "        double K_poly     = eos.K_ppoly_tab[polytropic_index];\n",
-    "        double Gamma_poly = eos.Gamma_ppoly_tab[polytropic_index];\n",
-    "        double P_cold     = K_poly*pow(rho_b[index],Gamma_poly);\n",
+    "        const int polytropic_index = find_polytropic_K_and_Gamma_index(eos, rho_b[index]);\n",
+    "        const double K_poly     = eos.K_ppoly_tab[polytropic_index];\n",
+    "        const double Gamma_poly = eos.Gamma_ppoly_tab[polytropic_index];\n",
+    "        const double P_cold     = K_poly*pow(rho_b[index],Gamma_poly);\n",
     "\n",
     "        /* Compare P and P_cold */\n",
     "        double P_rel_error = fabs(P[index] - P_cold)/P[index];\n",
     "        if( rho_b[index] > rho_b_atm && P_rel_error > 1e-2 ) {\n",
-    "\n",
+    "          const double Gamma_poly_local = log(P[index]/K_poly) / log(rho_b[index]);\n",
     "          /* Determine the value of Gamma_poly_local associated with P[index] */\n",
-    "          CCTK_VError(VERR_DEF_PARAMS,\"Expected a piecewise polytropic EOS with local Gamma_poly = %.15e, but found a point such that Gamma_poly_local = %.15e.\\nError = %e\\nrho_b = %e\\nrho_b_atm = %e\\nP = %e\\n\",\n",
-    "                      Gamma_poly, 0.123456, P_rel_error, rho_b[index], rho_b_atm, P[index]);\n",
+    "          CCTK_VWarn(0, __LINE__, __FILE__, CCTK_THORNSTRING,\n",
+    "\"Expected a PP EOS with local Gamma_poly = %.15e, but found a point such that Gamma_poly_local = %.15e.\\n\",\n",
+    "                     Gamma_poly, Gamma_poly_local);\n",
+    "          CCTK_VWarn(0, __LINE__, __FILE__, CCTK_THORNSTRING,\n",
+    "\"rho_b = %e\\nrho_b_atm = %e\\nP = %e\\nP_cold = %e\\nError = %e\\n\",\n",
+    "                      rho_b[index], rho_b_atm, P[index],P_cold,P_rel_error);\n",
     "        }\n",
     "\n",
     "        Ax[index] = Avec[CCTK_GFINDEX4D(cctkGH,i,j,k,0)];\n",
