GRHD/GRFFE: Bugfixes and major improvements

--- a/Tutorial-GRHD_Equations-Cartesian-c-code.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian-c-code.ipynb
@@ -457,8 +457,8 @@
    "source": [
     "# Next compute fluxes of conservative variables\n",
     "Ge.compute_rho_star_fluxU(vU, Ge.rho_star)\n",
-    "Ge.compute_tau_tilde_fluxU(alpha,              Ge.sqrtgammaDET,    vU,Ge.T4UU)\n",
-    "Ge.compute_S_tilde_fluxUD(gammaDD,betaU,alpha, Ge.sqrtgammaDET,       Ge.T4UU)\n",
+    "Ge.compute_tau_tilde_fluxU(alpha, Ge.sqrtgammaDET,    vU,Ge.T4UU)\n",
+    "Ge.compute_S_tilde_fluxUD( alpha, Ge.sqrtgammaDET,       Ge.T4UD)\n",
     "\n",
     "    \n",
     "normD = ixp.zerorank1()\n",
@@ -629,11 +629,11 @@
     "    gammaDD_dD[2][2][i] = (gzz_plus - gzz_minus)/(2*h)\n",
     "\n",
     "# Compute g_{mu nu, i} based on ADM quantities & derivatives defined above\n",
-    "Ge.compute_g4DDdD(gammaDD,betaU,alpha, gammaDD_dD,betaU_dD,alpha_dD)\n",
+    "Ge.compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, gammaDD_dD,betaU_dD,alpha_dD)\n",
     "\n",
     "# Compute source terms for tau tilde & S tilde:\n",
     "Ge.compute_s_source_term(KDD,betaU,alpha, Ge.sqrtgammaDET,alpha_dD,  Ge.T4UU)\n",
-    "Ge.compute_S_tilde_source_termD(   alpha, Ge.sqrtgammaDET,Ge.g4DDdD, Ge.T4UU)\n",
+    "Ge.compute_S_tilde_source_termD(   alpha, Ge.sqrtgammaDET,Ge.g4DD_zerotimederiv_dD, Ge.T4UU)\n",
     "\n",
     "exprArray = []\n",
     "nameArray = []\n",
@@ -887,7 +887,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GRMHD_Equations-Cartesian.ipynb to latex\n",
-      "[NbConvertApp] Writing 105818 bytes to Tutorial-GRMHD_Equations-Cartesian.tex\n",
+      "[NbConvertApp] Writing 108538 bytes to Tutorial-GRMHD_Equations-Cartesian.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
