--- a/Tutorial-GRHD_Equations-Cartesian-new.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian-new.ipynb
@@ -97,7 +97,7 @@
     "for i in range(DIM):\n",
     "    for mu in range(4):\n",
     "        for nu in range(4):\n",
-    "            S_tilde_rhsD[i] += alpsqrtgam * T4EMUU[mu][nu] * g4DDdD[mu][nu][i+1] / 2\n",
+    "            S_tilde_rhsD[i] += alpsqrtgam * T4EMUU[mu][nu] * g4DD_zerotimederiv_dD[mu][nu][i+1] / 2\n",
     "```"
    ]
   },
@@ -122,7 +122,7 @@
     "1. [Step 5](#grhdsourceterms): Define source terms on RHSs of GRHD equations\n",
     "    1. [Step 5.a](#ssourceterm): **compute_s_source_term()**: Define $s$ source term on RHS of $\\tilde{\\tau}$ equation\n",
     "    1. [Step 5.b](#stildeisourceterm): Define source term on RHS of $\\tilde{S}_i$ equation\n",
-    "        1. [Step 5.b.i](#fourmetricderivs): **compute_g4DDdD()**: Compute $g_{\\mu\\nu,i}$ in terms of ADM quantities and their derivatives\n",
+    "        1. [Step 5.b.i](#fourmetricderivs): **compute_g4DD_zerotimederiv_dD()**: Compute $g_{\\mu\\nu,i}$ in terms of ADM quantities and their derivatives\n",
     "        1. [Step 5.b.ii](#stildeisource): **compute_S_tilde_source_termD()**: Compute source term of the $\\tilde{S}_i$ equation: $\\frac{1}{2} \\alpha\\sqrt{\\gamma} T^{\\mu\\nu} g_{\\mu\\nu,i}$\n",
     "1. [Step 6](#convertvtou): **u4U_in_terms_of_vU_apply_speed_limit()**: Conversion of $v^i$ to $u^\\mu$ (Courtesy Patrick Nelson)\n",
     "1. [Step 7](#declarevarsconstructgrhdeqs): Declare ADM and hydrodynamical input variables, and construct GRHD equations\n",
@@ -337,7 +337,7 @@
     "        tau_tilde_fluxU[j] = alpha**2*sqrtgammaDET*T4UU[0][j+1] - rho_star*vU[j]\n",
     "\n",
     "# Step 4.d: S_tilde flux\n",
-    "def compute_S_tilde_fluxUD(gammaDD,betaU,alpha, sqrtgammaDET, T4UU):\n",
+    "def compute_S_tilde_fluxUD(alpha, sqrtgammaDET, T4UD):\n",
     "    global S_tilde_fluxUD\n",
     "    S_tilde_fluxUD = ixp.zerorank2(DIM=3)\n",
     "    for j in range(3):\n",
@@ -440,8 +440,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_g4DDdD(gammaDD,betaU,alpha, gammaDD_dD,betaU_dD,alpha_dD):\n",
-    "    global g4DDdD\n",
+    "def compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, gammaDD_dD,betaU_dD,alpha_dD):\n",
+    "    global g4DD_zerotimederiv_dD\n",
     "    # Eq. 2.121 in B&S\n",
     "    betaD = ixp.zerorank1()\n",
     "    for i in range(3):\n",
@@ -456,22 +456,22 @@
     "                betaDdD[i][k] += gammaDD_dD[i][j][k]*betaU[j] + gammaDD[i][j]*betaU_dD[j][k]\n",
     "\n",
     "    # Eq. 2.122 in B&S\n",
-    "    g4DDdD = ixp.zerorank3(DIM=4)\n",
+    "    g4DD_zerotimederiv_dD = ixp.zerorank3(DIM=4)\n",
     "    for k in range(3):\n",
     "        # Recall that g4DD[0][0] = -alpha^2 + betaU[j]*betaD[j]\n",
-    "        g4DDdD[0][0][k+1] += -2*alpha*alpha_dD[k]\n",
+    "        g4DD_zerotimederiv_dD[0][0][k+1] += -2*alpha*alpha_dD[k]\n",
     "        for j in range(3):\n",
-    "            g4DDdD[0][0][k+1] += betaU_dD[j][k]*betaD[j] + betaU[j]*betaDdD[j][k]\n",
+    "            g4DD_zerotimederiv_dD[0][0][k+1] += betaU_dD[j][k]*betaD[j] + betaU[j]*betaDdD[j][k]\n",
     "\n",
     "    for i in range(3):\n",
     "        for k in range(3):\n",
     "            # Recall that g4DD[i][0] = g4DD[0][i] = betaD[i]\n",
-    "            g4DDdD[i+1][0][k+1] = g4DDdD[0][i+1][k+1] = betaDdD[i][k]\n",
+    "            g4DD_zerotimederiv_dD[i+1][0][k+1] = g4DD_zerotimederiv_dD[0][i+1][k+1] = betaDdD[i][k]\n",
     "    for i in range(3):\n",
     "        for j in range(3):\n",
     "            for k in range(3):\n",
     "                # Recall that g4DD[i][j] = gammaDD[i][j]\n",
-    "                g4DDdD[i+1][j+1][k+1] = gammaDD_dD[i][j][k]"
+    "                g4DD_zerotimederiv_dD[i+1][j+1][k+1] = gammaDD_dD[i][j][k]"
    ]
   },
   {
@@ -483,7 +483,7 @@
     "### Step 5.b.ii: Compute source term of the $\\tilde{S}_i$ equation: $\\frac{1}{2} \\alpha\\sqrt{\\gamma} T^{\\mu\\nu} g_{\\mu\\nu,i}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{stildeisource}$$\n",
     "\n",
-    "Now that we've computed `g4DDdD`$=g_{\\mu\\nu,i}$, the $\\tilde{S}_i$ evolution equation source term may be quickly constructed."
+    "Now that we've computed `g4DD_zerotimederiv_dD`$=g_{\\mu\\nu,i}$, the $\\tilde{S}_i$ evolution equation source term may be quickly constructed."
    ]
   },
   {
@@ -493,13 +493,13 @@
    "outputs": [],
    "source": [
     "# Step 5.b.ii: Compute S_tilde source term\n",
-    "def compute_S_tilde_source_termD(alpha, sqrtgammaDET,g4DDdD, T4UU):\n",
+    "def compute_S_tilde_source_termD(alpha, sqrtgammaDET,g4DD_zerotimederiv_dD, T4UU):\n",
     "    global S_tilde_source_termD\n",
     "    S_tilde_source_termD = ixp.zerorank1(DIM=3)\n",
     "    for i in range(3):\n",
     "        for mu in range(4):\n",
     "            for nu in range(4):\n",
-    "                S_tilde_source_termD[i] += sp.Rational(1,2)*alpha*sqrtgammaDET*T4UU[mu][nu]*g4DDdD[mu][nu][i+1]"
+    "                S_tilde_source_termD[i] += sp.Rational(1,2)*alpha*sqrtgammaDET*T4UU[mu][nu]*g4DD_zerotimederiv_dD[mu][nu][i+1]"
    ]
   },
   {
@@ -595,18 +595,18 @@
     "\n",
     "# Next compute fluxes of conservative variables\n",
     "compute_rho_star_fluxU(vU, rho_star)\n",
-    "compute_tau_tilde_fluxU(alpha,             sqrtgammaDET, vU,T4UU)\n",
-    "compute_S_tilde_fluxUD(gammaDD,betaU,alpha, sqrtgammaDET,    T4UU)\n",
+    "compute_tau_tilde_fluxU(alpha,              sqrtgammaDET, vU,T4UU)\n",
+    "compute_S_tilde_fluxUD( alpha,              sqrtgammaDET,    T4UD)\n",
     "\n",
-    "# Then declare derivatives & compute g4DDdD\n",
+    "# Then declare derivatives & compute g4DD_zerotimederiv_dD\n",
     "gammaDD_dD = ixp.declarerank3(\"gammaDD_dD\",\"sym01\",DIM=3)\n",
     "betaU_dD   = ixp.declarerank2(\"betaU_dD\"  ,\"nosym\",DIM=3)\n",
     "alpha_dD   = ixp.declarerank1(\"alpha_dD\"          ,DIM=3)\n",
-    "compute_g4DDdD(gammaDD,betaU,alpha, gammaDD_dD,betaU_dD,alpha_dD)\n",
+    "compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, gammaDD_dD,betaU_dD,alpha_dD)\n",
     "\n",
     "# Then compute source terms on tau_tilde and S_tilde equations\n",
     "compute_s_source_term(KDD,betaU,alpha, sqrtgammaDET,alpha_dD, T4UU)\n",
-    "compute_S_tilde_source_termD(    alpha, sqrtgammaDET,g4DDdD,   T4UU)\n",
+    "compute_S_tilde_source_termD(    alpha, sqrtgammaDET,g4DD_zerotimederiv_dD,   T4UU)\n",
     "\n",
     "# Finally compute the 4-velocities in terms of an input 3-velocity testvU\n",
     "testvU = ixp.declarerank1(\"testvU\",DIM=3)\n",
@@ -623,7 +623,7 @@
     "$$\\label{code_validation}$$\n",
     "\n",
     "As a code validation check, we verify agreement in the SymPy expressions for the GRHD equations generated in\n",
-    "1. this tutorial verus\n",
+    "1. this tutorial versus\n",
     "2. the NRPy+ [GRHD.equations](../edit/GRHD/equations.py) module."
    ]
   },
@@ -653,17 +653,17 @@
     "# Next compute fluxes of conservative variables\n",
     "Ge.compute_rho_star_fluxU (                                     Ge.vU,Ge.rho_star)\n",
     "Ge.compute_tau_tilde_fluxU(alpha,              Ge.sqrtgammaDET, Ge.vU,Ge.T4UU)\n",
-    "Ge.compute_S_tilde_fluxUD (gammaDD,betaU,alpha,Ge.sqrtgammaDET,       Ge.T4UU)\n",
+    "Ge.compute_S_tilde_fluxUD (alpha,              Ge.sqrtgammaDET,       Ge.T4UD)\n",
     "\n",
-    "# Then declare derivatives & compute g4DDdD\n",
+    "# Then declare derivatives & compute g4DD_zerotimederiv_dD\n",
     "# gammaDD_dD = ixp.declarerank3(\"gammaDD_dD\",\"sym01\",DIM=3)\n",
     "# betaU_dD   = ixp.declarerank2(\"betaU_dD\"  ,\"nosym\",DIM=3)\n",
     "# alpha_dD   = ixp.declarerank1(\"alpha_dD\"          ,DIM=3)\n",
-    "Ge.compute_g4DDdD(gammaDD,betaU,alpha, gammaDD_dD,betaU_dD,alpha_dD)\n",
+    "Ge.compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, gammaDD_dD,betaU_dD,alpha_dD)\n",
     "\n",
     "# Finally compute source terms on tau_tilde and S_tilde equations\n",
     "Ge.compute_s_source_term(KDD,betaU,alpha, Ge.sqrtgammaDET,alpha_dD, Ge.T4UU)\n",
-    "Ge.compute_S_tilde_source_termD(    alpha, Ge.sqrtgammaDET,Ge.g4DDdD,Ge.T4UU)\n",
+    "Ge.compute_S_tilde_source_termD(    alpha, Ge.sqrtgammaDET,Ge.g4DD_zerotimederiv_dD,Ge.T4UU)\n",
     "\n",
     "GetestvU = ixp.declarerank1(\"testvU\")\n",
     "Ge.u4U_in_terms_of_vU_apply_speed_limit(alpha,betaU,gammaDD, GetestvU)"
@@ -714,9 +714,9 @@
     "        exprcheck_list.extend([Ge.T4UU[mu][nu],Ge.T4UD[mu][nu]])\n",
     "        expr_list.extend([T4UU[mu][nu],T4UD[mu][nu]])\n",
     "        for delta in range(4):\n",
-    "            namecheck_list.extend([gfnm(\"g4DDdD\",mu,nu,delta)])\n",
-    "            exprcheck_list.extend([Ge.g4DDdD[mu][nu][delta]])\n",
-    "            expr_list.extend([g4DDdD[mu][nu][delta]])\n",
+    "            namecheck_list.extend([gfnm(\"g4DD_zerotimederiv_dD\",mu,nu,delta)])\n",
+    "            exprcheck_list.extend([Ge.g4DD_zerotimederiv_dD[mu][nu][delta]])\n",
+    "            expr_list.extend([g4DD_zerotimederiv_dD[mu][nu][delta]])\n",
     "            \n",
     "        \n",
     "for i in range(3):\n",
@@ -760,7 +760,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GRHD_Equations-Cartesian-new.ipynb to latex\n",
-      "[NbConvertApp] Writing 72969 bytes to Tutorial-GRHD_Equations-Cartesian-new.tex\n",
+      "[NbConvertApp] Writing 94203 bytes to Tutorial-GRHD_Equations-Cartesian-new.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
