--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -194,7 +194,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 3.65271496773 seconds.\n"
+      "Finished BSSN symbolic expressions in 8.87144494057 seconds.\n"
      ]
     }
    ],
@@ -464,11 +464,11 @@
       "Generating C code for BSSN RHSs in Cartesian coordinates.\n",
       "Generating C code for Ricci tensor in Cartesian coordinates.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen in 0.418785095215 seconds.\n",
+      "Finished gamma constraint C codegen in 1.79368209839 seconds.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished Hamiltonian & momentum constraint C codegen in 10.4404850006 seconds.\n",
-      "Finished Ricci C codegen in 30.4998939037 seconds.\n",
-      "Finished BSSN_RHS C codegen in 33.228867054 seconds.\n"
+      "Finished Hamiltonian & momentum constraint C codegen in 25.2613589764 seconds.\n",
+      "Finished Ricci C codegen in 67.0160908699 seconds.\n",
+      "Finished BSSN_RHS C codegen in 72.6785800457 seconds.\n"
      ]
     }
    ],
@@ -1707,6 +1707,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import BaikalETK.BaikalETK_Pymodule as BE\n",
+    "# BE.BaikalETK_codegen(outrootdir=\"BaikalETK-validate\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1721,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1739,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BaikalETK.ipynb to latex\n",
-      "[NbConvertApp] Writing 202816 bytes to Tutorial-BaikalETK.tex\n",
+      "[NbConvertApp] Writing 203328 bytes to Tutorial-BaikalETK.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
