--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-opt-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-opt-Psi4.ipynb
@@ -272,7 +272,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 12.3932518959 seconds.\n"
+      "Finished BSSN symbolic expressions in 5.128122091293335 seconds.\n"
      ]
     }
    ],
@@ -569,70 +569,120 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
-      "Generating C code for BSSN RHSs in SinhSpherical coordinates.\n",
-      "Generating C code for Ricci tensor in SinhSpherical coordinates.\n",
-      "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Generating C code for psi4_re_pt0 in SinhSpherical coordinates.\n",
       "Generating C code for psi4_re_pt1 in SinhSpherical coordinates.\n",
-      "Generating C code for psi4_re_pt2 in SinhSpherical coordinates.\n",
       "Generating C code for psi4_im_pt0 in SinhSpherical coordinates.\n",
+      "Generating C code for psi4_re_pt2 in SinhSpherical coordinates.\n",
+      "Generating C code for psi4_re_pt0 in SinhSpherical coordinates.\n",
+      "Finished generating psi4_re_pt1 in 9.62213921546936 seconds.\n",
       "Generating C code for psi4_im_pt1 in SinhSpherical coordinates.\n",
+      "Finished generating psi4_im_pt1 in 4.912618160247803 seconds.\n",
       "Generating C code for psi4_im_pt2 in SinhSpherical coordinates.\n",
-      "Finished gamma constraint C codegen in 1.79141402245 seconds.\n",
-      "Finished generating psi4_im_pt1 in 12.6269309521 seconds.\n",
+      "Finished generating psi4_im_pt0 in 25.479920625686646 seconds.\n",
+      "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
+      "Finished generating psi4_re_pt0 in 54.318809032440186 seconds.\n",
+      "Generating C code for BSSN RHSs in SinhSpherical coordinates.\n",
+      "Finished BL initial data codegen in 31.28118872642517 seconds.\n",
+      "Generating C code for Ricci tensor in SinhSpherical coordinates.\n",
+      "Finished generating psi4_im_pt2 in 57.197081089019775 seconds.\n",
       "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
-      "Finished generating psi4_re_pt1 in 16.4502251148 seconds.\n",
-      "Finished generating psi4_im_pt0 in 24.5377650261 seconds.\n",
-      "Finished BL initial data codegen in 28.0190799236 seconds.\n",
-      "Finished generating psi4_re_pt0 in 37.0488481522 seconds.\n",
-      "Finished generating psi4_im_pt2 in 38.8510599136 seconds.\n",
-      "Finished generating psi4_re_pt2 in 52.7448780537 seconds.\n",
-      "Finished Hamiltonian C codegen in 61.9070761204 seconds.\n",
-      "Finished BSSN_RHS C codegen in 183.460883856 seconds.\n",
-      "Finished Ricci C codegen in 235.343798876 seconds.\n"
+      "Finished generating psi4_re_pt2 in 101.81725144386292 seconds.\n",
+      "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Finished gamma constraint C codegen in 0.46669435501098633 seconds.\n",
+      "Finished Hamiltonian C codegen in 213.8212025165558 seconds.\n",
+      "Finished BSSN_RHS C codegen in 386.5171105861664 seconds.\n",
+      "Finished Ricci C codegen in 480.8736288547516 seconds.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Process ForkPoolWorker-2:\n",
+      "Process ForkPoolWorker-4:\n",
+      "Process ForkPoolWorker-3:\n",
+      "Process ForkPoolWorker-1:\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/pool.py\", line 108, in worker\n",
+      "    task = get()\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/queues.py\", line 334, in get\n",
+      "    with self._rlock:\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/pool.py\", line 108, in worker\n",
+      "    task = get()\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/synchronize.py\", line 95, in __enter__\n",
+      "    return self._semlock.__enter__()\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/pool.py\", line 108, in worker\n",
+      "    task = get()\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/queues.py\", line 334, in get\n",
+      "    with self._rlock:\n",
+      "KeyboardInterrupt\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/synchronize.py\", line 95, in __enter__\n",
+      "    return self._semlock.__enter__()\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/pool.py\", line 108, in worker\n",
+      "    task = get()\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/queues.py\", line 335, in get\n",
+      "    res = self._reader.recv_bytes()\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/queues.py\", line 334, in get\n",
+      "    with self._rlock:\n",
+      "KeyboardInterrupt\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 216, in recv_bytes\n",
+      "    buf = self._recv_bytes(maxlength)\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/synchronize.py\", line 95, in __enter__\n",
+      "    return self._semlock.__enter__()\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 407, in _recv_bytes\n",
+      "    buf = self._recv(4)\n",
+      "KeyboardInterrupt\n",
+      "  File \"/usr/lib/python3.6/multiprocessing/connection.py\", line 379, in _recv\n",
+      "    chunk = read(handle, remaining)\n",
+      "KeyboardInterrupt\n"
      ]
     }
    ],
    "source": [
+    "# Step 0: Import the multiprocessing module.\n",
     "import multiprocessing\n",
     "\n",
-    "if __name__ == '__main__':\n",
-    "    ID  = multiprocessing.Process(target=BrillLindquistID)\n",
-    "    RHS = multiprocessing.Process(target=BSSN_RHSs)\n",
-    "    Ric = multiprocessing.Process(target=Ricci)\n",
-    "    Ham = multiprocessing.Process(target=Hamiltonian)\n",
-    "    gam = multiprocessing.Process(target=gammadet)\n",
-    "    Psi4re0 = multiprocessing.Process(target=Psi4re, args=(0,))\n",
-    "    Psi4re1 = multiprocessing.Process(target=Psi4re, args=(1,))\n",
-    "    Psi4re2 = multiprocessing.Process(target=Psi4re, args=(2,))\n",
-    "    Psi4im0 = multiprocessing.Process(target=Psi4im, args=(0,))\n",
-    "    Psi4im1 = multiprocessing.Process(target=Psi4im, args=(1,))\n",
-    "    Psi4im2 = multiprocessing.Process(target=Psi4im, args=(2,))\n",
-    "    \n",
-    "    ID.start()\n",
-    "    RHS.start()\n",
-    "    Ric.start()\n",
-    "    Ham.start()\n",
-    "    gam.start()\n",
-    "    Psi4re0.start()\n",
-    "    Psi4re1.start()\n",
-    "    Psi4re2.start()\n",
-    "    Psi4im0.start()\n",
-    "    Psi4im1.start()\n",
-    "    Psi4im2.start()\n",
-    "     \n",
-    "    ID.join()\n",
-    "    RHS.join()\n",
-    "    Ric.join()\n",
-    "    Ham.join()\n",
-    "    gam.join()\n",
-    "    Psi4re0.join()\n",
-    "    Psi4re1.join()\n",
-    "    Psi4re2.join()\n",
-    "    Psi4im0.join()\n",
-    "    Psi4im1.join()\n",
-    "    Psi4im2.join()"
+    "# Step 1: Create a list of functions we wish to evaluate in parallel\n",
+    "funcs = [Psi4re,Psi4re,Psi4re,Psi4im,Psi4im,Psi4im, BrillLindquistID,BSSN_RHSs,Ricci,Hamiltonian,gammadet]\n",
+    "# Step 1.a: Define master function for parallelization.\n",
+    "#           Note that lambdifying this doesn't work in Python 3\n",
+    "def master_func(arg):\n",
+    "    if arg < 3: # Call Psi4re(arg)\n",
+    "        funcs[arg](arg)\n",
+    "    elif arg < 6: # Call Psi4im(arg-3)\n",
+    "        funcs[arg](arg-3)\n",
+    "    else: # All non-Psi4 functions:\n",
+    "        funcs[arg]()\n",
+    "\n",
+    "# Step 2: Evaluate list of functions in parallel if allowed; \n",
+    "#         otherwise fallback to serial evaluation:\n",
+    "try:\n",
+    "    if __name__ == '__main__':\n",
+    "        pool = multiprocessing.Pool()\n",
+    "        pool.map(master_func,range(len(funcs)))\n",
+    "except:\n",
+    "    # If multiprocessing didn't work for whatever reason,\n",
+    "    #        evaluate functions in serial.\n",
+    "    for func in funcs:\n",
+    "        func()"
    ]
   },
   {
@@ -1271,24 +1321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BrillLindquist_Playground -lm`...\n",
-      "Finished executing in 24.893226862 seconds.\n",
-      "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3 ./BrillLindquist_Playground 800 16 2 1.0`...\n",
-      "\u001b[2KIt: 360 t=0.89 dt=2.48e-03 | 0.3%; ETA 20725 s | t/h 47.61 | gp/s 5.46e+05\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cmdline_helper as cmd\n",
     "CFL_FACTOR=1.0\n",
@@ -1642,21 +1679,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
