--- a/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
@@ -24,7 +24,7 @@
     "## Introduction: Applying boundary conditions in curvilinear coordinates\n",
     "$$\\label{intro}$$\n",
     "\n",
-    "There are three challenges we face when solving PDEs in curvilinear coordinates:\n",
+    "Here is a list of four challenges we face when solving PDEs in curvilinear coordinates:\n",
     "\n",
     "1. [Challenge 1](#innerouterbcs): Unlike ordinary Cartesian coordinate grids, not all boundary points on uniform curvilinear coordinate grids are outer boundary points.\n",
     "1. [Challenge 2](#coordinversion): Figuring out the locations to which boundary points map requires a coordinate inversion, but some coordinate systems are not easily invertible.\n",
@@ -1572,10 +1572,10 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -O2 -g -fopenmp CurviBoundaryConditions_opt_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 0.633180856705 seconds.\n",
+      "Finished executing in 0.4063870906829834 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3,4,5 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.225685834885 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.20777201652526855 seconds.\n",
       "Finished this code cell.\n"
      ]
     }
@@ -1626,19 +1626,19 @@
       "Running discrete CurviBC_Playground test on Spherical data, using NRPy+ CurviBoundaryConditions_opt.CurviBoundaryConditions_opt module.\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_opt_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 1.23263907433 seconds.\n",
+      "Finished executing in 1.0108137130737305 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3,4,5 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.225185155869 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.20739054679870605 seconds.\n",
       "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
       "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n",
       "Running discrete CurviBC_Playground test on Cylindrical data, using NRPy+ CurviBoundaryConditions_opt.CurviBoundaryConditions_opt module.\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_opt_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 1.23242616653 seconds.\n",
+      "Finished executing in 1.0112295150756836 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3,4,5 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.223591089249 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.2080378532409668 seconds.\n",
       "Finished this code cell.\n",
       "\n",
       "\n",
@@ -1699,7 +1699,7 @@
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
-    "[Tutorial-Start_to_Finish-Curvilinear_BCs.pdf](Tutorial-Start_to_Finish-Curvilinear_BCs.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+    "[Tutorial-Start_to_Finish-Curvilinear_BCs-new.pdf](Tutorial-Start_to_Finish-Curvilinear_BCs-new.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
@@ -1711,8 +1711,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb to latex\n",
-      "[NbConvertApp] Writing 108754 bytes to Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
+      "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb to latex\n",
+      "[NbConvertApp] Writing 218751 bytes to Tutorial-Start_to_Finish-Curvilinear_BCs-new.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -1726,31 +1726,31 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-Curvilinear_BCs-new.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-Curvilinear_BCs-new.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-Curvilinear_BCs-new.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
