--- a/Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.ipynb
+++ b/Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.ipynb
@@ -78,6 +78,7 @@
     "import finite_difference as fin\n",
     "import reference_metric as rfm\n",
     "import BSSN.BSSN_quantities as Bq\n",
+    "import os\n",
     "\n",
     "# Set spatial dimension (must be 3 for BSSN)\n",
     "DIM = 3\n",
@@ -126,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C implementation of det(gammabar) constraint to file BSSN/enforce_detgammabar_constraint.h\n"
+      "Output C function enforce_detgammabar_constraint() to file BSSN/enforce_detgammabar_constraint.h-validation\n"
      ]
     }
    ],
@@ -154,12 +155,13 @@
     "hprimeDD = ixp.zerorank2()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
+    "        # Using nrpyAbs here, as it directly translates to fabs() without additional SymPy processing.\n",
+    "        #    This acts to simplify the final expression somewhat.\n",
     "        hprimeDD[i][j] = \\\n",
-    "        (sp.Abs(rfm.detgammahat)/detgammabar)**(sp.Rational(1,3)) * (KroneckerDeltaDD[i][j] + hDD[i][j]) \\\n",
+    "        (nrpyAbs(rfm.detgammahat)/detgammabar)**(sp.Rational(1,3)) * (KroneckerDeltaDD[i][j] + hDD[i][j]) \\\n",
     "        - KroneckerDeltaDD[i][j]\n",
     "\n",
-    "enforce_detg_constraint_vars = [ \\\n",
-    "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD00\"),rhs=hprimeDD[0][0]),\n",
+    "enforce_detg_constraint_vars = [lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD00\"),rhs=hprimeDD[0][0]),\n",
     "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD01\"),rhs=hprimeDD[0][1]),\n",
     "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD02\"),rhs=hprimeDD[0][2]),\n",
     "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD11\"),rhs=hprimeDD[1][1]),\n",
@@ -167,19 +169,15 @@
     "                                lhrh(lhs=gri.gfaccess(\"in_gfs\",\"hDD22\"),rhs=hprimeDD[2][2]) ]\n",
     "\n",
     "enforce_gammadet_string = fin.FD_outputC(\"returnstring\",enforce_detg_constraint_vars,\n",
-    "                                         params=\"outCverbose=False,preindent=0,includebraces=False\")\n",
+    "                                         params=\"outCverbose=False,preindent=1,includebraces=False\")\n",
     "\n",
-    "with open(\"BSSN/enforce_detgammabar_constraint.h\", \"w\") as file:\n",
-    "    indent = \"   \"\n",
-    "    file.write(\"void enforce_detgammabar_constraint(const int Nxx_plus_2NGHOSTS[3],REAL *xx[3], REAL *in_gfs) {\\n\\n\")\n",
-    "    file.write(lp.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],\n",
-    "                       [\"Nxx_plus_2NGHOSTS[2]\",\"Nxx_plus_2NGHOSTS[1]\",\"Nxx_plus_2NGHOSTS[0]\"],\n",
-    "                       [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\n",
-    "                                      \"    const REAL xx2 = xx[2][i2];\",\n",
-    "                                      \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
-    "                                     \"const REAL xx0 = xx[0][i0];\\n\"+enforce_gammadet_string))\n",
-    "    file.write(\"}\\n\")\n",
-    "print(\"Output C implementation of det(gammabar) constraint to file BSSN/enforce_detgammabar_constraint.h\")"
+    "desc = \"Enforce det(gammabar) = det(gammahat) constraint.\"\n",
+    "name = \"enforce_detgammabar_constraint\"\n",
+    "outCfunction(\n",
+    "    outfile=os.path.join(\"BSSN\", name + \".h-validation\"), desc=desc, name=name,\n",
+    "    params=\"rfm_struct *restrict rfmstruct,const paramstruct *restrict params, REAL *restrict in_gfs\",\n",
+    "    body=enforce_gammadet_string.replace(\"IDX4\", \"IDX4S\"),\n",
+    "    loopopts=\"InteriorPoints,Enable_rfm_precompute\")"
    ]
   },
   {
@@ -206,18 +204,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C implementation of det(gammabar) constraint to file BSSN/enforce_detgammabar_constraint.h\n",
+      "Output C function enforce_detgammabar_constraint() to file BSSN/enforce_detgammabar_constraint.h\n",
       "Validation test PASSED on file: BSSN/enforce_detgammabar_constraint.h\n"
      ]
     }
    ],
    "source": [
-    "!mv BSSN/enforce_detgammabar_constraint.h BSSN/enforce_detgammabar_constraint.h-validation\n",
-    "\n",
     "gri.glb_gridfcs_list = []\n",
     "\n",
     "import BSSN.Enforce_Detgammabar_Constraint as EGC\n",
-    "EGC.output_Enforce_Detgammabar_Constraint_Ccode()\n",
+    "EGC.output_Enforce_Detgammabar_Constraint_Ccode(version=\"new\",\n",
+    "                                                exprs=EGC.Enforce_Detgammabar_Constraint_symb_expressions())\n",
     "\n",
     "import filecmp\n",
     "for file in [\"BSSN/enforce_detgammabar_constraint.h\"]:\n",
@@ -251,7 +248,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.ipynb to latex\n",
-      "[NbConvertApp] Writing 41262 bytes to Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.tex\n",
+      "[NbConvertApp] Writing 39909 bytes to Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -275,21 +272,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
