Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro: fix ToC

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
@@ -31,7 +31,7 @@
     "* [BSSN/BSSN_constraints.py](../edit/BSSN/BSSN_constraints.py); [\\[**tutorial**\\]](Tutorial-BSSN_constraints.ipynb): Hamiltonian constraint in BSSN curvilinear basis/coordinates\n",
     "\n",
     "## Introduction:\n",
-    "Here we use NRPy+ to generate initial data for a [simple polytrope TOV star](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation).\n",
+    "Here we use NRPy+ to evolve initial data for a [simple polytrope TOV star](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation), keeping the $T^{\\mu\\nu}$ source terms fixed. As the hydrodynamical fields that go into $T^{\\mu\\nu}$ are not updated, this is called the \"Hydro without Hydro\" test.\n",
     "\n",
     "The entire algorithm is outlined as follows, with links to the relevant NRPy+ tutorial notebooks listed at each step:\n",
     "\n",
@@ -68,10 +68,7 @@
     "1. [Step 1](#initializenrpy): Set core NRPy+ parameters for numerical grids and reference metric\n",
     "    1. [Step 1.a](#cfl) Output needed C code for finding the minimum proper distance between grid points, needed for [CFL](https://en.wikipedia.org/w/index.php?title=Courant%E2%80%93Friedrichs%E2%80%93Lewy_condition&oldid=806430673)-limited timestep\n",
     "1. [Step 2](#adm_id_tov): Set up ADM initial data for polytropic TOV Star\n",
-    "    1. [Step 2.a](#tov_interp): Interpolating the TOV data file as needed\n",
-    "    1. [Step 2.b](#source): Compute source terms $S_{ij}$, $S_{i}$, $S$, and $\\rho$\n",
-    "    1. [Step 2.c](#jacobian): Jacobian transformation on the ADM/BSSN source terms\n",
-    "    1. [Step 2.d](#tensor): Rescale tensorial quantities\n",
+    "    1. [Step 2.a](#tov_interp): Interpolate the TOV data file as needed to set up ADM spacetime quantities in spherical basis (for input into the `Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear` module) and $T^{\\mu\\nu}$ in the chosen reference metric basis\n",
     "1. [Step 3](#adm_id_spacetime): Convert ADM spacetime quantity initial data to BSSN-in-curvilinear-coordinates\n",
     "1. [Step 4](#bssn): Output C code for BSSN spacetime solve\n",
     "    1. [Step 4.a](#bssnrhs): Set up the BSSN right-hand-side (RHS) expressions, and add the *rescaled* $T^{\\mu\\nu}$ source terms\n",
@@ -303,7 +300,7 @@
    "source": [
     "<a id='tov_interp'></a>\n",
     "\n",
-    "## Step 2.a: Interpolating the TOV data file as needed \\[Back to [top](#toc)\\]\n",
+    "## Step 2.a: Interpolate the TOV data file as needed to set up ADM spacetime quantities in spherical basis (for input into the `Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear` module) and $T^{\\mu\\nu}$ in the chosen reference metric basis \\[Back to [top](#toc)\\]\n",
     "$$\\label{tov_interp}$$\n",
     "\n",
     "The TOV data file just written stored $\\left(r,\\rho(r),P(r),M(r),e^{\\nu(r)}\\right)$, where $\\rho(r)$ is the total mass-energy density (cf. $\\rho_{\\text{baryonic}}$).\n",
